Closed Bug 1340733 Opened 8 years ago Closed 8 years ago

get 'attributes' from xpcom accessible hangs the browser in windows.

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

Details

(Whiteboard: aes?)

Attachments

(1 file)

No description provided.
Bug 1339951 fixes some deadlocks that could occur in content. We should retest this after that bug merges into central.
Depends on: 1339951
Whiteboard: aes?
(In reply to Aaron Klotz [:aklotz] from comment #1) > Bug 1339951 fixes some deadlocks that could occur in content. We should > retest this after that bug merges into central. This was more of an infinite loop issue..
No longer depends on: 1339951
Comment on attachment 8838792 [details] Bug 1340733 - Fix attributes getter in win/ProxyAccessible. https://reviewboard.mozilla.org/r/113612/#review115204 Thanks! Just 1 comment. ::: accessible/tests/browser/e10s/browser.ini:2 (Diff revision 1) > [DEFAULT] > +skip-if = e10s && os == 'win' && os_version == '5.1' Thanks for cleaning this up. FYI, we do not run these tests on XP any more so I think it should be safe to drop this skip-if entirely.
Attachment #8838792 - Flags: review?(yzenevich) → review+
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cb9e42d09099 Fix attributes getter in win/ProxyAccessible. r=yzen
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: