Bug 1340733 - Fix attributes getter in win/ProxyAccessible. r=yzen

MozReview-Commit-ID: 7s3UrJlcsEQ

--HG--
extra : rebase_source : 8e9505a5d789088ba121b67be00c7f2b0aa332a8